fit_predictor/cvrp_pomo/evaluates/run4/2025-01-25_21-30-28/problem_iter5_response6.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\CVRPModel.py", line 8, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\gpt.py", line 37
    getattr(globals(), heuristic_name) *= decay_factor
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'function call' is an illegal expression for augmented assignment

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2/problems/cvrp_pomo/eval.py", line 26, in <module>
    from CVRPTester import CVRPTester as Tester
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\CVRPTester.py", line 8, in <module>
    from CVRPModel import CVRPModel as Model
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\CVRPModel.py", line 10, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo_2\problems\cvrp_pomo\gpt.py", line 37
    getattr(globals(), heuristic_name) *= decay_factor
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'function call' is an illegal expression for augmented assignment
